# trading-algo

./: .gitignore  KNOWLEDGE_CHECK.md  Makefile  benchmark_trace.json  dune-project
_build/: .db  .digest-db  log
_build/default/: META.quant_kernel  quant_kernel.dune-package  quant_kernel.install
_build/default/.dune/: configurator  configurator.v2
_build/default/lib/: american_pricing.ml  config.ml  kernel.h  markov_kernel.cpp  monte_carlo.ml  neural_calib.cpp  neural_calibrate.ml  quant_kernel.cma  quant_kernel.cmxa  quant_kernel.cmxs  quant_kernel__.ml-gen  sabr_kernel.cpp  signature_kernel.cpp  stream_server.ml
_build/default/src_cpp/: CMakeLists.txt
_build/default/test/: test_quant_kernel.ml
bench/: bench_spmv.cpp
lib/: backtest_regime.py  dune  fetch_yahoo.py  heston.ml  heston.mli  kernel.cpp  kernel_stubs.cpp  manifold_calibration.ml  manifold_calibration.mli  manifold_geometry.ml  manifold_geometry.mli  market_data.ml  market_data.mli  markov_chain.ml  markov_kernel.h  math_guard.ml  math_guard.mli  memory_bridge.ml  neural_sabr.ml  quant_kernel.ml  research_bridge.ml  research_bridge.mli  sabr_kernel.h  signature_bergomi.ml  signature_kernel.cpp  signature_kernel.h  slv_engine.ml  stream_server.ml  stream_server.mli  tda_validation.py  tracer.h  visualize_calibration.py
research/: fda_fallback.py  sidecar_analysis.R
src_cpp/: signature_kernel.metal
test/: dune  test_quant_kernel.ml
ui/: package-lock.json  package.json
ui/src/: App.jsx  index.css
ui/src/components/: CommandBar.jsx  IntelligencePanel.jsx  ManifoldMap.jsx  MarkovGrid.jsx  (+9 more)
(+132 files in other folders)
